Melhoria no console de erros
