# routes/public-routes.php
@@ -1,3 +1,9 @@
 <?php
 return [
+    '/oauth/[a:provider]/redirect',
+    '/oauth/[a:provider]/callback',
+    '/auth/login',
+    '/auth/register',
+    '/auth/forgot-password',
+    '/auth/reset-password',
 ];
